gobmkida/g1/find_eye_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/find_eye_dragons/src/engine/optics.c:1105:4: error: use of undeclared identifier 'byte_A07ABF'
|| byte_A07ABF[v8] != 3 && p_origin[171] == origin && !*( ( _BYTE *)p_origin + 700) 
   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/find_eye_dragons/src/obj/1/optics.o] Error 1
